<resources>
    <!--APP-->
    <string name="app_name">Circles</string>

    <!--HOMEPAGE-->
    <string name="connect_info">Circles guarantees your privacy by encrypting everything</string>
    <string name="start_here">Start here</string>
    <string name="built_on_circles">Built on circles</string>
    <string name="find_apps">Find apps to use</string>
    <string name="how_stacks_works">How \nstacks \nworks</string>
    <string name="learn_more">Learn more about us</string>
    <string name="newsletter">Newsletter</string>
    <string name="stacks_ecosystem_title">Stacks Ecosystem Updates</string>
    <string name="stacks_ecosystem_text">Get regular updates from Hiro PBC via email. We usually send two updates a month, as well as bigger quarterly updates covering the stacks ecosystem.</string>
    <string name="subscribe">Subscribe</string>
    <string name="community">Community</string>
    <string name="join_discord">Join us on discord</string>
    <string name="avatar_content_description">User Avatar</string>

    <!--AUTH SCREENS-->
    <string name="connect_tracking_message">We won\'t be able to see, access, or track your activity</string>
    <string name="connect_key_message">You\'ll get a Secret Key that automatically encrypts everything you do</string>
    <string name="login_message">Enter your Secret Key to sign in</string>
    <string name="new_to_stacks">I\'m new to Stacks</string>
    <string name="continue_key">Continue with Secret Key</string>
    <string name="how_connect_works"><u>How Stacks Works</u></string>
    <string name="sign_in">Sign In</string>
    <string name="secret_key">Secret Key</string>
    <string name="save">Save</string>
    <string name="secret_key_error">The Secret Key you\'ve entered is invalid</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="welcome_info">Access your account at any time by clicking on the avatar icon, on the top right corner.</string>
    <string name="discover_stacks">Discover Stacks App</string>
    <string name="how_it_works">How it works</string>
    <string name="how_it_works_info"><b>The app keeps everything you do private with Blockstack\'s Secret Key technology</b>\nNormally, apps keep your data for them to use. When you have a Secret Key, you no longer have to trust the app with your data because the app won\'t have access.
\n\n<b>What is Blockstack?</b>\nBlockstack is the open-source technology that generates your Secret Key. There\'s no company that owns or controls Blockstack, it is independent. Go to blockstack.org
to learn more.
\n\n<b>Encryption</b>\nEncryption is always on. It locks everything you do in the app into useless codes. Because of this, the app can\'t see or track your activity. Your data can only be unlocked with the key that you own. No one else has this key, not even the app, so no one else can unlock your data
\n\n<b>What is a Secret Key?</b>\nYour Secret Key unlocks your data. It\'s created independently from the app to make sure that the app doesn\'t have it. An open-source protocol called Blockstack generates your Secret Key when you sign up. Nobody but you will have your Secret Key, to make sure that only you have access to your data.
\n\n<b>When will I need my Secret Key?</b>\nYou\'ll need your Secret Key to prove it\'s you when you use the app on a new device, such as a new phone or laptop. After that, your Secret Key will stay active to keep you safe and private in the apps you use on that device.
    </string>
    <string name="choose_username_info">This is how others will see you on other apps.</string>
    <string name="choose_username">Choose Username</string>
    <string name="username_not_available">Username is not available</string>
    <string name="continue_no_username"><u>Continue without username</u></string>
    <string name="continue_no_username_info">Some applications might require username</string>
    <string name="error">Something went wrong</string>>

    <!--ACCOUNT SCREENS-->
    <string name="profile">Profile</string>
    <string name="accounts">Accounts</string>
    <string name="create_account">Create a new account</string>
    <string name="logout">Log out</string>
    <string name="view_secret_key">View Secret Key</string>
    <string name="back_content_description">back button</string>
    <string name="copy_secret_key">Copy Secret Key</string>
    <string name="unknown">unknown</string>

    <!--SECRET SCREEN-->
    <string name="your_secret_key">Your Secret Key</string>
    <string name="your_secret_key_info">Here’s your Secret Key: 12 words that prove it’s you when you want to use it on a new device. Once lost it’s lost forever, so save it somewhere you won’t forget.</string>
    <string name="save_your_secret_key">Save your Secret Key</string>
    <string name="save_your_secret_key_info">Store your secret key somewhere safe, along with other critical, private information such as passwords. Once lost, it’s lost forever. So save it somewhere you won’t forget.</string>
    <string name="i_have_saved_it">I\'ve saved it</string>
    <string name="view_secret_key_again">View Secret Key Again</string>
    <string name="share_to_apps">Share to apps</string>
    <string name="copy">Copy</string>
    <string name="copied">Copied</string>
    <string name="more">More</string>
    <string name="continue_btn">Continue</string>

    <!--IDENTITIES SCREEN-->
    <string name="choose_an_account">Choose an Account</string>
    <string name="to_connect_to">To connect to %1$s</string>

    <!--WELCOME SCREEN-->
    <string name="all_set">You’re all set!</string>
    <string name="go_to">Go to %1$s</string>
    <string name="invalid_username">Invalid Username, you can only use lowercase letters (a–z), numbers (0–9), and underscores (_).</string>

</resources>
