<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:text="@string/newsletter"
        android:textAppearance="@style/TextAppearance.Circles.Subtitle" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="16dp"
        app:cardBackgroundColor="@color/org_circles_blue">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="8dp"
            android:paddingTop="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/stacks_ecosystem_title"
                android:textAppearance="@style/TextAppearance.Circles.Headline2"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:text="@string/stacks_ecosystem_text"
                android:textAppearance="@style/TextAppearance.Circles.Body2"
                android:textColor="@color/white" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/newsletterSubscribe"
                style="@style/Widget.Circles.ButtonOnPrimaryColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginHorizontal="8dp"
                android:layout_marginVertical="8dp"
                android:text="@string/subscribe" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>
