<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/ic_rounded_bg"
    android:orientation="vertical">

    <TextView
        style="@style/TextAppearance.Circles.Headline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/save_your_secret_key"
        android:textColor="@color/grey" />

    <TextView
        style="@style/TextAppearance.Circles.Body1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="22dp"
        android:text="@string/save_your_secret_key_info"
        android:textColor="@color/grey" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/saved"
            style="@style/Widget.Circles.Button"
            app:backgroundTint="@color/org_circles_blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/i_have_saved_it" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/viewAgain"
            style="@style/Widget.Circles.AlternativeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/view_secret_key_again" />
    </LinearLayout>

    <View
        style="@style/Divider"
        android:layout_marginVertical="8dp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:text="@string/share_to_apps"
        android:textAppearance="@style/TextAppearance.Circles.Subtitle"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="30dp"
        android:gravity="start"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/copy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:background="@drawable/ic_circle_stroke"
                tools:ignore="RtlHardcoded">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:importantForAccessibility="no"
                    android:padding="8dp"
                    android:src="@drawable/ic_content_copy"
                    app:tint="@color/grey_light1" />
            </FrameLayout>

            <TextView
                style="@style/TextAppearance.Circles.Subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:text="@string/copy" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:background="@drawable/ic_circle_stroke"
                tools:ignore="RtlHardcoded">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:importantForAccessibility="no"
                    android:src="@drawable/ic_more_horiz"
                    app:tint="@color/grey_light1" />
            </FrameLayout>

            <TextView
                style="@style/TextAppearance.Circles.Subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:text="@string/more" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
