<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/partial_tool_bar" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center"
        android:text="@string/continue_key"
        android:textAppearance="@style/TextAppearance.Stacks.Headline"
        app:layout_constraintBottom_toTopOf="@id/secret_key_message" />

    <TextView
        android:id="@+id/secret_key_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center"
        android:text="@string/connect_key_message"
        android:textAppearance="@style/TextAppearance.Stacks.Subtitle"
        app:layout_constraintBottom_toTopOf="@id/secret_key" />


    <EditText
        android:id="@+id/secret_key"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="8dp"
        android:background="@drawable/rounded_corner"
        android:gravity="top"
        android:hint="@string/secret_key_hint"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:padding="12dp"
        android:textColor="@color/black"
        android:textColorHint="@color/grey_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/sign_in"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>