<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true">

    <include layout="@layout/partial_tool_bar" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="46dp"
        android:importantForAccessibility="no"
        android:src="@drawable/ic_connect_logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:text="@string/connect_info"
        android:textAppearance="@style/TextAppearance.Stacks.Headline" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:paddingBottom="16dp">

        <ImageView
            android:id="@+id/connect_secret_key_desc_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:importantForAccessibility="no"
            android:paddingStart="24dp"
            android:src="@drawable/ic_lock"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/connect_secret_key_desc_title"
            app:tint="?colorPrimary"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/connect_secret_key_desc_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:gravity="top"
            android:text="@string/connect_key_message"
            android:textAppearance="@style/TextAppearance.Stacks.Subtitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/connect_secret_key_desc_icon"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/connect_tracking_desc_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:importantForAccessibility="no"
            android:paddingStart="24dp"
            android:src="@drawable/ic_track"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/connect_tracking_desc_title"
            app:tint="?colorPrimary"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/connect_tracking_desc_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:gravity="top"
            android:text="@string/connect_tracking_message"
            android:textAppearance="@style/TextAppearance.Stacks.Subtitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/connect_tracking_desc_icon"
            app:layout_constraintTop_toBottomOf="@+id/connect_secret_key_desc_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/newAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/new_to_connect" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login"
        style="@style/Widget.Stacks.ButtonOnPrimaryColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:text="@string/continue_key" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:clickable="true"
            android:focusable="true"
            android:id="@+id/howItWorks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/how_connect_works"
            android:textColor="@color/grey_light" />

    </LinearLayout>
</LinearLayout>