<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/partial_tool_bar" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/your_secret_key"
            android:textAppearance="@style/TextAppearance.Stacks.Headline3"
            android:textColor="@color/grey"/>

        <TextView
            style="@style/TextAppearance.Stacks.Body1"
            android:textColor="@color/grey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textAlignment="textStart"
            android:text="@string/your_secret_key_info" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:gravity="center"
                    android:text="@string/your_secret_key"
                    android:textColor="@color/grey_light2" />

                <View style="@style/Divider"/>

                <TextView
                    android:textIsSelectable="true"
                    android:id="@+id/secretKey"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginVertical="16dp"
                    android:gravity="center"
                    android:textColor="@color/black"
                    tools:text="husband delay reveal comfort chicken fan coral drop couch horn sea energy" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>


    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/copyKeyButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="16dp"
        android:text="@string/copy_secret_key" />

</merge>